--- a/Filter2.ipynb
+++ b/Filter2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7d187599",
+   "metadata": {},
+   "source": [
+    "# Analyse exploratoire des données (EDA)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "d11bf921",
@@ -156,6 +164,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fcbbdb4b",
+   "metadata": {},
+   "source": [
+    "# Prétraitement du texte"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "c31cf893",
@@ -179,8 +195,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6ca3ed4",
+   "metadata": {},
+   "source": [
+    "# Afficher les premiers exemples de messages spam et ham (non spam) dans un DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f733801f",
    "metadata": {},
    "outputs": [
@@ -194,7 +218,9 @@
     }
    ],
    "source": [
+    "# Afficher les 5 premiers exemples de spam et ham\n",
     "print(df[df['label'] == 'spam']['text'].head())\n",
+    "\n",
     "print(df[df['label'] == 'ham']['text'].head())"
    ]
   },
@@ -294,6 +320,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6408b32f",
+   "metadata": {},
+   "source": [
+    "# Extraction des caractéristiques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a02964c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convertir le texte nettoyé (clean_text) en vecteurs numériques exploitables par un modèle de machine learning,\n",
+    "# à l’aide de la technique TF-IDF, puis stocker les étiquettes (spam ou ham) dans y."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "3d10c0be",
@@ -312,6 +357,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "682af7dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Diviser les données en jeu d'entraînement et jeu de test, pour entraîner et évaluer un modèle de machine learning."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "d367eb68",
    "metadata": {},
@@ -320,6 +375,16 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3330a37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Entraîner trois modèles de classification différents pour détecter les spams à partir des emails vectorisés en TF-IDF."
    ]
   },
   {
@@ -1009,6 +1074,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "44366ec5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Évaluer la performance des modèles Naive Bayes, Arbre de Décision et SVM sur le jeu de test, à l’aide :\n",
+    "\n",
+    "#de la matrice de confusion\n",
+    "\n",
+    "#et du rapport de classification (précision, rappel, f1-score, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "f2a33edb",
    "metadata": {},
@@ -1072,6 +1151,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "b36932b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Évaluer les performances générales du modèle Naive Bayes avec une validation croisée à 5 plis (5-fold cross-validation)."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "73681ca4",
    "metadata": {},
@@ -1089,6 +1178,17 @@
     "\n",
     "# Validation croisée pour chaque modèle\n",
     "print(\"Naive Bayes CV:\", cross_val_score(nb, X, y, cv=5).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ef549113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Évaluer les performances globales du modèle d’Arbre de Décision (DecisionTreeClassifier)\n",
+    "#  en utilisant une validation croisée à 5 plis (cv=5)."
    ]
   },
   {
@@ -1111,6 +1211,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "19367c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Évaluer la performance moyenne du modèle SVM linéaire (LinearSVC) avec une validation croisée à 5 plis."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "42e1488f",
    "metadata": {},
@@ -1125,6 +1235,17 @@
    ],
    "source": [
     "print(\"SVM CV:\", cross_val_score(svm, X, y, cv=5).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7097fe37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trouver automatiquement la meilleure valeur du paramètre C pour un classifieur SVM linéaire (LinearSVC), \n",
+    "# à l’aide de la recherche par grille (Grid Search) et validation croisée."
    ]
   },
   {
@@ -1152,6 +1273,17 @@
     "grid.fit(X_train, y_train)\n",
     "\n",
     "print(\"Meilleurs paramètres :\", grid.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c2d34512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sauvegarder le modèle entraîné (ici le meilleur modèle trouvé par la recherche de grille GridSearchCV) \n",
+    "# dans un fichier pour pouvoir le réutiliser plus tard sans avoir à le réentraîner."
    ]
   },
   {
