--- a/Filter2.ipynb
+++ b/Filter2.ipynb
@@ -1309,6 +1309,27 @@
     "# Sauvegarder le modèle\n",
     "joblib.dump(grid.best_estimator_, \"best_model.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a0da31fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tfidf_vectorizer.pkl']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(vectorizer, \"tfidf_vectorizer.pkl\")"
+   ]
   }
  ],
  "metadata": {
